makefile modification, data_results movement added

--- a/src/GPU/Makefile
+++ b/src/GPU/Makefile
@@ -20,6 +20,7 @@ NVCC = nvcc
 # name of executables file
 ANALYZE = analyze.x
 STREAM = stream.x
+FILE = "../../data_results/gpu_perf.dat"
 
 ###############################################################
 # Basic flags for compilers, one for debug options
@@ -58,18 +59,19 @@ reference.o: reference.c
 	$(GCC) -c reference.c $(GCC_OPTS) $(INC)
 
 clean:	
-	rm -f *.o *.~ *.dat main $(ANALYZE)
+	rm -f *.o *.~ main $(ANALYZE)
 	
 run:
 	rm -f GPU-polyphase.dat
 	@printf '#num \t fir \t\t fir+fft \t bandwidth \t flops \t\t HtoD \t\t DtoH\n' > GPU-polyphase.dat
-	./$(ANALYZE) 2 10007 > GPU-10.dt
-	./$(ANALYZE) 2 15007 > GPU-15.dt
-	./$(ANALYZE) 2 20007 > GPU-20.dt
-	./$(ANALYZE) 2 30007 > GPU-30.dt
-	./$(ANALYZE) 2 40007 > GPU-40.dt
-	./$(ANALYZE) 2 50007 > GPU-50.dt
-	./$(ANALYZE) 2 60007 > GPU-60.dt
+	./$(ANALYZE) 2 10007 > ./logs/GPU-10.dt
+	./$(ANALYZE) 2 15007 > ./logs/GPU-15.dt
+	./$(ANALYZE) 2 20007 > ./logs/GPU-20.dt
+	./$(ANALYZE) 2 30007 > ./logs/GPU-30.dt
+	./$(ANALYZE) 2 40007 > ./logs/GPU-40.dt
+	./$(ANALYZE) 2 50007 > ./logs/GPU-50.dt
+	./$(ANALYZE) 2 60007 > ./logs/GPU-60.dt
+	@mv -f GPU-polyphase.dat $(FILE)
 
 help:
 	@printf '\n\n-----------------------------------------------------\n'
