--- a/src/GPU/Makefile
+++ b/src/GPU/Makefile
@@ -27,8 +27,9 @@ FILE = "../../data_results/gpu_perf-gtx480-all.dat"
 # fmad flags used for reason of floating point operation
 ###############################################################
 NVCCFLAGS = -O2 -arch=sm_20 --ptxas-options=-v --use_fast_math -Xcompiler -Wextra
+#NVCCFLAGS = -O0 -arch=sm_20 --ptxas-options=-v -Xptxas -dlcm=cg --use_fast_math -Xcompiler -Wextra
 #NVCCFLAGS= -g -G -arch=sm_20 --ptxas-options=-v --use_fast_math -Xcompiler -Wextra
-GCC_OPTS =-O2 -Wall -Wextra 
+GCC_OPTS =-O3 -Wall -Wextra 
 
 all:	analyze stream
 
